--- a/build.xml
+++ b/build.xml
@@ -93,7 +93,7 @@
 
     <jar destfile="${java_school.jar.client}/ija-client.jar" basedir="${java_school.output.dir}">
       <manifest>
-        <attribute name="Main-Class" value="solitaire.Solitaire"/>
+        <attribute name="Main-Class" value="solitaire.SolitaireClient"/>
       </manifest>
       <zipgroupfileset dir="lib" includes="**/*.jar"/>
       <fileset dir="src/cards"/>
@@ -101,7 +101,7 @@
 
     <jar destfile="${java_school.jar.server}/ija-server.jar" basedir="${java_school.output.dir}">
       <manifest>
-        <attribute name="Main-Class" value="solitaire.networking.SolitaireServer"/>
+        <attribute name="Main-Class" value="solitaire.networking.NetworkServer"/>
       </manifest>
       <zipgroupfileset dir="lib" includes="**/*.jar"/>
     </jar>
